err/django-mustachejs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mustachejs-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/mustachejs'...
Compiling './lib/python3.5/site-packages/mustachejs/finders.py'...
***   File "./lib/python3.5/site-packages/mustachejs/finders.py", line 101
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mustachejs/loading.py'...
***   File "./lib/python3.5/site-packages/mustachejs/loading.py", line 50
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mustachejs/management'...
Listing './lib/python3.5/site-packages/mustachejs/management/commands'...
Listing './lib/python3.5/site-packages/mustachejs/static'...
Listing './lib/python3.5/site-packages/mustachejs/static/mustache'...
Listing './lib/python3.5/site-packages/mustachejs/static/mustache/js'...
Listing './lib/python3.5/site-packages/mustachejs/templatetags'...
Listing './lib/python3.5/site-packages/mustachejs/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
